--- a/src/js/directives/templates/leftNav.html
+++ b/src/js/directives/templates/leftNav.html
@@ -1,12 +1,29 @@
 
-
+<div ng-controller="leftNavCtrl">
 <ul class="nav nav-pills  left-nav">
-  <div class="btn-group">
-        <label class="btn btn-primary btn-sm" ng-model="radioModel" uib-btn-radio="'All'">All</label>
-        <label class="btn btn-primary btn-sm" ng-model="radioModel" uib-btn-radio="'Popular'">Popular</label>
-        <label class="btn btn-primary btn-sm" ng-model="radioModel" uib-btn-radio="'Near Me'">Near Me</label>
-        <label class="btn btn-primary btn-sm" ng-model="radioModel" uib-btn-radio="'My Matches'">My Matches</label>
-        <label class="btn btn-primary btn-sm" ng-model="radioModel" uib-btn-radio="'Chatting'">Chatting</label>
-    </div>
-  <
+        <li ng-class="{ active:tab.isSet('All')}"
+          <a href ng-click="tab.setTab('All')">All</a>
+        </li>
+        <li ng-class="{ active:tab.isSet('Popular')}">
+          <a href ng-click="tab.setTab('Popular')">Popular</a>
+        </li>
+        <li ng-class="{ active:tab.isSet('Near Me')}">
+          <a href ng-click="tab.setTab('Near Me')}">Near Me</a>
+        <li ng-class="{ active:tab.isSet('My Matches')}">
+          <a href ng-click="tab.setTab('My Matches')}">My Matches</a>
+        <li ng-class="{ active:tab.isSet('Chatting')}">
+          <a href ng-click="tab.setTab('Chatting')}">Chatting</a>
 </ul>
+    
+            
+          <user-list type="All" ng-show="tab.isSet('All')"></all-matches>
+
+          <user-list type="Popular" ng-show="tab.isSet('Popular')"></user-list>
+
+          <user-list type="Near Me" ng-show="tab.isSet('Near Me')"></user-list>
+
+          <user-list type="My Matches" ng-show="tab.isSet('My Matches')"></user-list>
+
+          <user-list type="Chatting" ng-show="tab.isSet('Chatting')"></user-list>
+
+</div>
