--- a/src/js/directives/templates/leftNav.html
+++ b/src/js/directives/templates/leftNav.html
@@ -1,29 +1,32 @@
   
 <div ng-controller="leftNavCtrl">
 <ul class="nav nav-pills  left-nav">
-        <li ng-class="{ active:leftNavCtrl.tabIsSet('All')}"
-          <a href ng-click="leftNavCtrl.setTab('All')">All</a>
+        <li ng-class="{ active:tabIsSet(1)}">
+          <a href ng-click="setTab(1)">All</a>
         </li>
-        <li ng-class="{ active:leftNavCtrl.tabIsSet('Popular')}">
-          <a href ng-click="leftNavCtrl.setTab('Popular')">Popular</a>
+        <li ng-class="{ active:tabIsSet(2)}">
+          <a href ng-click="setTab(2)">Popular</a>
         </li>
-        <li ng-class="{ active:leftNavCtrl.tabIsSet('Near Me')}">
-          <a href ng-click="leftNavCtrl.setTab('Near Me')">Near Me</a>
-        <li ng-class="{ active:leftNavCtrl.tabIsSet('My Matches')}">
-          <a href ng-click="leftNavCtrl.setTab('My Matches')">My Matches</a>
-        <li ng-class="{ active:leftNavCtrl.tabIsSet('Chatting')}">
-          <a href ng-click="leftNavCtrl.setTab('Chatting')">Chatting</a>
+        <li ng-class="{ active:tabIsSet(3)}">
+          <a href ng-click="setTab(3)">Near Me</a>
+        </li>
+        <li ng-class="{ active:tabIsSet(4)}">
+          <a href ng-click="setTab(4)">My Matches</a>
+        </li>
+        <li ng-class="{ active:tabIsSet(5)}">
+          <a href ng-click="setTab(5)">Chatting</a>
+        </li>
 </ul>
     
-            
-          <user-list type="All" ng-show="leftNavCtrl.isSet('All')"></all-matches>
+      <div>            
+          <user-list type="All" ng-show="leftNavCtrl.isSet(1)"></user-list>
 
-          <user-list type="Popular" ng-show="leftNavCtrl.isSet('Popular')"></user-list>
+          <user-list type="Popular" ng-show="leftNavCtrl.isSet(2)"></user-list>
 
-          <user-list type="Near Me" ng-show="leftNavCtrl.isSet('Near Me')"></user-list>
+          <user-list type="Near Me" ng-show="leftNavCtrl.isSet(3)"></user-list>
 
-          <user-list type="My Matches" ng-show="leftNavCtrl.isSet('My Matches')"></user-list>
+          <user-list type="My Matches" ng-show="leftNavCtrl.isSet(4)"></user-list>
 
-          <user-list type="Chatting" ng-show="leftNavCtrl.isSet('Chatting')"></user-list>
-
+          <user-list type="Chatting" ng-show="leftNavCtrl.isSet(5)"></user-list>
+        </div>
 </div>
