--- a/src/js/directives/templates/topNav.html
+++ b/src/js/directives/templates/topNav.html
@@ -1,6 +1,5 @@
  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -10,14 +9,12 @@
       </button>
       <a class="navbar-brand" href="#">gDating</a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
   
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Search</a></li>
         <li><a href="#">My Profile</a></li>
         <li><a href="#">Logout</a></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </div>
