--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,3 +1,31 @@
    <div class ng-controller="mainCtrl">
         <p>{{ profile }}</p>
     </div>
+
+    <div ng-controller="leftNavCtrl">
+      <ul class="nav nav-pills  left-nav">
+        <li>
+          <a href ng-click="setTab(1)">All</a>
+        </li>
+        <li>
+          <a href ng-click="setTab(2)">Popular</a>
+        </li>
+        <li>
+          <a href ng-click="setTab(3)">Near Me</a>
+        </li>
+        <li>
+          <a href ng-click="setTab(4)">My Matches</a>
+        </li>
+        <li>
+          <a href ng-click="setTab(5)">Chatting</a>
+        </li>
+      </ul>  
+      <div ng-switch on="tab">  
+          <ng-switch-when="1"> 
+          <ng-switch-when="2">
+          <ng-switch-when="3">
+          <ng-switch-when="4"><p>cool</p></user-list>
+          <ng-switch-when="5">
+          <div ng-switch-default><p>YO</p></div>
+      </div>
+</div>
