--- a/src/templates/allprofiles.html
+++ b/src/templates/allprofiles.html
@@ -5,13 +5,13 @@
             <li><a href ="#/allprofiles">All</a></li>
             <li><a href ="#/popular">Popular</a></li>
             <li><a href ="#/nearme">Near Me</a></li>
-            <li><a href ="#/mymatches">My Matches</a></li>
+            <li><a href ="#/matches">My Matches</a></li>
             <li><a href ="#/chatting">Chatting</a></li>
         </ul>  
       </div>
     </div>
     <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-4">
             <div class="media" ng-repeat="profile in profiles">
               <div class="media-left">
                 <img class="media-object" ng-src="{{profile.avatar}}" alt="avatar">
@@ -23,8 +23,15 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4" ng-controller="showCtrl">
-            <p>COOL</p>
-            {{id}}
+          <div class="col-md-3" ng-controller="showCtrl">
+             <div class="media">
+              <div class="media-left">
+                <img class="media-object" ng-src="{{profile.avatar}}" alt="avatar">
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading">{{profile.username}}</h4>
+                <p>{{profile.dob | date}}</p>
+                <p>{{profile.email}}</p>
+              </div>
           </div>
     </div>
