--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -15,7 +15,7 @@
                       <a href ="#/nearme">Near Me</a>
                     </li>
                     <li>
-                      <a href ="#/mymatches">My Matches</a>
+                      <a href ="#/matches">My Matches</a>
                     </li>
                     <li>
                       <a href ="#/chatting">Chatting</a>
