--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <p class="lead">Already a member? Please<a href="#/login">log in</a></p>
+      <p class="lead">Already a member? Please<a href="#/login?page={{return-Page}}">log in</a></p>
        <form ng-submit="onSubmit()">
         <div role="alert" ng-show="formError" class="alert alert-danger"> {{formError}}</div>
         <div class="form-group">
@@ -28,4 +28,12 @@
           <label for="Last Name"></label>
           <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" ng-model="credentials.names.lastName">
         </div>
+        <div class="form-group">
+          <label for="Description"></label>
+          <input type="text" class="form-control" id="description" placeholder="Enter your description" ng-model="credentials.description">
+        </div>
         <button type="submit" class="btn btn-default">Register!</button>
+      </form>
+    </div>
+  </div>
+</div>
