--- a/src/js/directives/templates/topNav.html
+++ b/src/js/directives/templates/topNav.html
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Search</a></li>
         <li><a href="#">My Profile</a></li>
-        <li><a href="#">Logout</a></li>
+        <li><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
   </div>
