--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6">
      <h1>Login Page</h1>
-      <p class="lead">Not a member yet? Please<a href="#/register?page={{return-Page}}">Register</a></p>
+      <p class="lead">Not a member yet? Please<a href="#/register">Register</a></p>
        <form ng-submit="onSubmit()">
         <div role="alert" ng-show="formError" class="alert alert-danger"> {{formError}}</div>
         <div class="form-group">
