--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6">
      <h2>Registration Page</h2>
-      <p class="lead">Already a member? Please<a href="#/login?page={{return-Page}}">log in</a></p>
+      <p class="lead">Already a member? Please<a href="#/login">log in</a></p>
        <form ng-submit="onSubmit()">
         <div role="alert" ng-show="formError" class="alert alert-danger"> {{formError}}</div>
         <div class="form-group">
