--- a/src/templates/allprofiles.html
+++ b/src/templates/allprofiles.html
@@ -35,8 +35,20 @@
                 <p><a href="" ng-click="getConversations(profile._id); conversations=true">Get Conversations</a></p>
                 <div ng-show="conversations">
                   {{conversationList}}
-                  <input ng-model="content" type="text" class="form-control" title="content">
-                  <button ng-click="postConversation(profile._id, content)" type="button" class="btn btn-warning">Send Message</button>
+                   <form ng-submit="postConversation()">
+                      <div role="alert" ng-show="formError" class="alert alert-danger">
+                        {{formError}}
+                      </div>
+                      <div class="form-group">
+                        <label for="content"></label>
+                        <input type="text" class="form-control" id="content" placeholder="Enter your message" ng-model="message.content" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="Recipient ID"></label>
+                        <input type="hidden" class="form-control" id="_recipient" ng-model="message.profile._id">
+                     </div>
+                       <button type="submit" class="btn btn-default">Send Message!</button>
+                   </form>
                 </div>
               </div>
           </div>
