--- a/src/templates/allprofiles.html
+++ b/src/templates/allprofiles.html
@@ -37,9 +37,8 @@
                 <div ng-if="conversationList.length===0">No Conversations!!</div>
                 <div ng-if="conversationList.length>0">
                     <div ng-repeat="conversation in conversationList">
-                    <!--{{conversation._sender==="You"}} -->
                       <div ng-switch="conversation._sender">
-                        <p ng-switch-when=="You"><span style="color:red">{{conversation._sender}}:&nbsp <span style="color:black">{{conversation.content}}</span></p>
+                        <p ng-switch-when="You"><span style="color:red">{{conversation._sender}}:&nbsp <span style="color:black">{{conversation.content}}</span></p>
                         <p ng-switch-default><span style="color:blue">{{conversation._sender}}: &nbsp<span style="color:black">{{conversation.content}}</span></p>
                       </div>
                     </div>
